--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -1882,7 +1882,8 @@
                             <child>
                               <widget class="GtkNotebook" id="notebook_sup">
                                 <property name="visible">True</property>
-                                <property name="can_focus">False</property>
+				<property name="can_focus">False</property>
+				<property name="show_tabs">False</property>
                                 <property name="show_border">False</property>
                                 <property name="tab_hborder">18</property>
                                 <property name="tab_vborder">4</property>
